depends on mihomo

--- a/luci-app-mihomo/Makefile
+++ b/luci-app-mihomo/Makefile
@@ -1,7 +1,7 @@
 include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI Support for mihomo
-LUCI_DEPENDS:=+luci-base
+LUCI_DEPENDS:=+luci-base +mihomo
 
 include $(TOPDIR)/feeds/luci/luci.mk
 
