change luci acl description

--- a/luci-app-mihomo/root/usr/share/rpcd/acl.d/luci-app-mihomo.json
+++ b/luci-app-mihomo/root/usr/share/rpcd/acl.d/luci-app-mihomo.json
@@ -1,6 +1,6 @@
 {
 	"luci-app-mihomo": {
-		"description": "Grant UCI access for luci-app-mihomo",
+		"description": "Grant access to mihomo procedures",
 		"read": {
 			"uci": [ "mihomo" ],
 			"file": {
