--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -2,7 +2,7 @@ config mihomo 'config'
 	option 'enabled' '0'
 	option 'scheduled_restart' '0'
 	option 'cron_exp' '0 3 * * *'
-	option 'profile' 'default'
+	option 'profile' 'http://example.com/default.yaml'
 	option 'mode' 'rule'
 	option 'http_port' '8080'
 	option 'socks_port' '1080'
@@ -15,9 +15,9 @@ config mihomo 'config'
 	option 'tun' '0'
 	option 'tun_stack' 'system'
 
-config profile 'default'
-	option 'url' ''
-	option 'path' '/etc/mihomo/profiles/default.yaml'
+config subscription
+	option 'name' 'default'
+	option 'url' 'http://example.com/default.yaml'
 
 config access_control 'access_control'
 	option 'mode' ''
