--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -19,5 +19,7 @@ config subscription
 	option 'name' 'default'
 	option 'url' 'http://example.com/default.yaml'
 
-config access_control 'access_control'
-	option 'mode' ''
+config proxy 'proxy'
+	option 'transparent_proxy' '1'
+	option 'router_proxy' '1'
+	option 'access_control_mode' ''
