--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -1,8 +1,19 @@
-config mihomo 'config'
+config config 'config'
 	option 'enabled' '0'
 	option 'scheduled_restart' '0'
-	option 'cron_exp' '0 3 * * *'
+	option 'cron_expression' '0 3 * * *'
 	option 'profile' 'http://example.com/default.yaml'
+
+config proxy 'proxy'
+	option 'transparent_proxy' '1'
+	option 'router_proxy' '1'
+	option 'access_control_mode' ''
+
+config subscription
+	option 'name' 'default'
+	option 'url' 'http://example.com/default.yaml'
+
+config mixin 'mixin'
 	option 'mode' 'rule'
 	option 'http_port' '8080'
 	option 'socks_port' '1080'
@@ -14,12 +25,3 @@ config mihomo 'config'
 	option 'fake_ip_range' '198.18.0.1/16'
 	option 'tun' '0'
 	option 'tun_stack' 'system'
-
-config subscription
-	option 'name' 'default'
-	option 'url' 'http://example.com/default.yaml'
-
-config proxy 'proxy'
-	option 'transparent_proxy' '1'
-	option 'router_proxy' '1'
-	option 'access_control_mode' ''
