1. implement almost all global config 2. change mixin config to multi tab 3. fix the problem of no network when running for the first time

--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -8,6 +8,7 @@ config proxy 'proxy'
 	option 'transparent_proxy' '1'
 	option 'router_proxy' '1'
 	option 'access_control_mode' ''
+	option 'routing_mark' '255'
 
 config subscription
 	option 'name' 'default'
@@ -15,6 +16,13 @@ config subscription
 
 config mixin 'mixin'
 	option 'mode' 'rule'
+	option 'match_process' 'off'
+	option 'unify_delay' '1'
+	option 'tcp_concurrent' '1'
+	option 'api_port' '9090'
+	option 'api_secret' '644666'
+	option 'selection_cache' '1'
+	option 'allow_lan' '1'
 	option 'http_port' '8080'
 	option 'socks_port' '1080'
 	option 'mixed_port' '7890'
@@ -23,5 +31,11 @@ config mixin 'mixin'
 	option 'dns_port' '1053'
 	option 'dns_mode' 'fake-ip'
 	option 'fake_ip_range' '198.18.0.1/16'
-	option 'tun' '0'
-	option 'tun_stack' 'system'
+	option 'fake_ip_cache' '1'
+	option 'geoip_format' 'dat'
+	option 'geodata_loader' 'memconservative'
+	option 'geoip_mmdb_url' 'https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country_lite.mmdb'
+	option 'geoip_dat_url' 'https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip_lite.dat'
+	option 'geosite_url' 'https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat'
+	option 'geox_auto_update' '0'
+	option 'geox_update_interval' '24'
