correct the default geox url config

--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -34,8 +34,8 @@ config mixin 'mixin'
 	option 'fake_ip_cache' '1'
 	option 'geoip_format' 'dat'
 	option 'geodata_loader' 'memconservative'
-	option 'geoip_mmdb_url' 'https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country_lite.mmdb'
-	option 'geoip_dat_url' 'https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip_lite.dat'
-	option 'geosite_url' 'https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat'
+	option 'geoip_mmdb_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country-lite.mmdb'
+	option 'geoip_dat_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip-lite.dat'
+	option 'geosite_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat'
 	option 'geox_auto_update' '0'
 	option 'geox_update_interval' '24'
