1. update mihomo to 1.18.5 2. add dashboard config

--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -19,6 +19,7 @@ config mixin 'mixin'
 	option 'match_process' 'off'
 	option 'unify_delay' '1'
 	option 'tcp_concurrent' '1'
+	option 'ui_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip'
 	option 'api_port' '9090'
 	option 'api_secret' '644666'
 	option 'selection_cache' '1'
