1. change default api secret 2. add permission for config.yaml

--- a/luci-app-mihomo/root/usr/share/rpcd/acl.d/luci-app-mihomo.json
+++ b/luci-app-mihomo/root/usr/share/rpcd/acl.d/luci-app-mihomo.json
@@ -4,6 +4,7 @@
 		"read": {
 			"uci": [ "mihomo" ],
 			"file": {
+				"/etc/mihomo/run/config.yaml": ["read"],
 				"/etc/mihomo/profiles/*.yaml": ["read"],
 				"/etc/mihomo/profiles/*.yml": ["read"]
 			}
@@ -11,6 +12,7 @@
 		"write": {
 			"uci": [ "mihomo" ],
 			"file": {
+				"/etc/mihomo/run/config.yaml": ["write"],
 				"/etc/mihomo/profiles/*.yaml": ["write"],
 				"/etc/mihomo/profiles/*.yml": ["write"]
 			}
