--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -20,11 +20,11 @@ config mixin 'mixin'
 	option 'unify_delay' '1'
 	option 'tcp_concurrent' '1'
 	option 'ui_razord' '0'
-	option 'ui_razord_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/Razord-meta/archive/refs/heads/gh-pages.zip'
+	option 'ui_razord_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/Razord-meta/archive/refs/heads/gh-pages.tar.gz'
 	option 'ui_yacd' '0'
-	option 'ui_yacd_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/Yacd-meta/archive/refs/heads/gh-pages.zip'
+	option 'ui_yacd_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/Yacd-meta/archive/refs/heads/gh-pages.tar.gz'
 	option 'ui_metacubexd' '1'
-	option 'ui_metacubexd_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip'
+	option 'ui_metacubexd_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.tar.gz'
 	option 'api_port' '9090'
 	option 'api_secret' '666666'
 	option 'selection_cache' '1'
