1. add luci mixin config 2. refacor the logic of yq eval

--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -19,6 +19,7 @@ config mixin 'mixin'
 	option 'match_process' 'off'
 	option 'unify_delay' '1'
 	option 'tcp_concurrent' '1'
+	option 'tcp_keep_alive_interval' '600'
 	option 'ui_razord' '0'
 	option 'ui_razord_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/Razord-meta/archive/refs/heads/gh-pages.tar.gz'
 	option 'ui_yacd' '0'
@@ -37,7 +38,24 @@ config mixin 'mixin'
 	option 'dns_port' '1053'
 	option 'dns_mode' 'fake-ip'
 	option 'fake_ip_range' '198.18.0.1/16'
+	list 'fake_ip_filter' '+.lan'
+	list 'fake_ip_filter' '+.local'
 	option 'fake_ip_cache' '1'
+	option 'dns_hosts' '1'
+	option 'dns_system_hosts' '1'
+	option 'dns_nameserver' '1'
+	option 'fallback_filter' '1'
+	list 'fallback_filter_geoip' 'CN'
+	list 'fallback_filter_geosite' 'gfw'
+	list 'fallback_filter_ipcidr' '240.0.0.0/4'
+	list 'fallback_filter_domain' 'gfw'
+	option 'dns_nameserver_policy' '1'
+	option 'sniffer' '1'
+	option 'sniff_dns_mapping' '1'
+	option 'sniff_pure_ip' '1'
+	option 'sniffer_overwrite_dest' '1'
+	list 'sniffer_force_domain' 'example.com'
+	list 'sniffer_ignore_domain' 'example.com'
 	option 'geoip_format' 'dat'
 	option 'geodata_loader' 'memconservative'
 	option 'geoip_mmdb_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country-lite.mmdb'
@@ -45,3 +63,66 @@ config mixin 'mixin'
 	option 'geosite_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat'
 	option 'geox_auto_update' '0'
 	option 'geox_update_interval' '24'
+
+config host
+	option 'enabled' '0'
+	option 'domian_name' 'localhost'
+	list 'ip' '127.0.0.1'
+	list 'ip' '::1'
+
+config nameserver
+	option 'enabled' '1'
+	option 'type' 'default'
+	list 'nameserver' '223.5.5.5'
+	list 'nameserver' '119.29.29.29'
+
+config nameserver
+	option 'enabled' '1'
+	option 'type' 'proxy-server'
+	list 'nameserver' 'https://dns.alidns.com/dns-query'
+	list 'nameserver' 'https://doh.pub/dns-query'
+
+config nameserver
+	option 'enabled' '1'
+	option 'type' 'nameserver'
+	list 'nameserver' 'https://dns.alidns.com/dns-query'
+	list 'nameserver' 'https://doh.pub/dns-query'
+
+config nameserver
+	option 'enabled' '1'
+	option 'type' 'fallback'
+	list 'nameserver' 'https://dns.cloudflare.com/dns-query'
+	list 'nameserver' 'https://dns.google/dns-query'
+
+config nameserver_policy
+	option 'enabled' '1'
+	option 'matcher' 'geosite:cn,private'
+	list 'nameserver' 'https://dns.alidns.com/dns-query'
+	list 'nameserver' 'https://doh.pub/dns-query'
+
+config nameserver_policy
+	option 'enabled' '1'
+	option 'matcher' 'geosite:geolocation-!cn'
+	list 'nameserver' 'https://dns.cloudflare.com/dns-query'
+	list 'nameserver' 'https://dns.google/dns-query'
+
+config sniff
+	option 'enabled' '0'
+	option 'protocol' 'HTTP'
+	list 'port' '80'
+	list 'port' '8080-8880'
+	option 'overwrite_dest' '1'
+
+config sniff
+	option 'enabled' '0'
+	option 'protocol' 'TLS'
+	list 'port' '443'
+	list 'port' '8443'
+	option 'overwrite_dest' '1'
+
+config sniff
+	option 'enabled' '0'
+	option 'protocol' 'QUIC'
+	list 'port' '443'
+	list 'port' '8443'
+	option 'overwrite_dest' '1'
