update luci config

--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -46,16 +46,16 @@ config mixin 'mixin'
 	option 'dns_nameserver' '1'
 	option 'fallback_filter' '1'
 	list 'fallback_filter_geoip' 'CN'
-	list 'fallback_filter_geosite' 'gfw'
+	list 'fallback_filter_geosite' 'GFW'
 	list 'fallback_filter_ipcidr' '240.0.0.0/4'
-	list 'fallback_filter_domain' 'gfw'
+	list 'fallback_filter_domain_name' '+.google.com'
 	option 'dns_nameserver_policy' '1'
 	option 'sniffer' '1'
 	option 'sniff_dns_mapping' '1'
 	option 'sniff_pure_ip' '1'
 	option 'sniffer_overwrite_dest' '1'
-	list 'sniffer_force_domain' 'example.com'
-	list 'sniffer_ignore_domain' 'example.com'
+	list 'sniffer_force_domain_name' 'example.com'
+	list 'sniffer_ignore_domain_name' 'example.com'
 	option 'geoip_format' 'dat'
 	option 'geodata_loader' 'memconservative'
 	option 'geoip_mmdb_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country-lite.mmdb'
@@ -66,7 +66,7 @@ config mixin 'mixin'
 
 config host
 	option 'enabled' '0'
-	option 'domian_name' 'localhost'
+	option 'domain_name' 'localhost'
 	list 'ip' '127.0.0.1'
 	list 'ip' '::1'
 
