1. update luci config default value 2. refactor luci config of fallback filter

--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -41,16 +41,12 @@ config mixin 'mixin'
 	list 'fake_ip_filter' '+.lan'
 	list 'fake_ip_filter' '+.local'
 	option 'fake_ip_cache' '1'
-	option 'dns_hosts' '1'
-	option 'dns_system_hosts' '1'
-	option 'dns_nameserver' '1'
-	option 'fallback_filter' '1'
-	list 'fallback_filter_geoip' 'CN'
-	list 'fallback_filter_geosite' 'GFW'
-	list 'fallback_filter_ipcidr' '240.0.0.0/4'
-	list 'fallback_filter_domain_name' '+.google.com'
+	option 'dns_system_hosts' '0'
+	option 'dns_hosts' '0'
+	option 'dns_nameserver' '0'
+	option 'fallback_filter' '0'
 	option 'dns_nameserver_policy' '1'
-	option 'sniffer' '1'
+	option 'sniffer' '0'
 	option 'sniff_dns_mapping' '1'
 	option 'sniff_pure_ip' '1'
 	option 'sniffer_overwrite_dest' '1'
@@ -93,6 +89,24 @@ config nameserver
 	option 'type' 'fallback'
 	list 'nameserver' 'https://dns.cloudflare.com/dns-query'
 	list 'nameserver' 'https://dns.google/dns-query'
+
+config fallback_filter
+	option 'enabled' '1'
+	option 'type' 'geoip'
+	list 'value' 'CN'
+
+config fallback_filter
+	option 'enabled' '1'
+	option 'type' 'geosite'
+	list 'value' 'GFW'
+
+config fallback_filter
+	option 'enabled' '0'
+	option 'type' 'ipcidr'
+
+config fallback_filter
+	option 'enabled' '0'
+	option 'type' 'domain_name'
 
 config nameserver_policy
 	option 'enabled' '1'
