add mixin logic for new luci config

--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -38,13 +38,14 @@ config mixin 'mixin'
 	option 'dns_port' '1053'
 	option 'dns_mode' 'fake-ip'
 	option 'fake_ip_range' '198.18.0.1/16'
-	list 'fake_ip_filter' '+.lan'
-	list 'fake_ip_filter' '+.local'
+	option 'fake_ip_filter' '1'
+	list 'fake_ip_filters' '+.lan'
+	list 'fake_ip_filters' '+.local'
 	option 'fake_ip_cache' '1'
 	option 'dns_system_hosts' '0'
 	option 'dns_hosts' '0'
 	option 'dns_nameserver' '0'
-	option 'fallback_filter' '0'
+	option 'dns_fallback_filter' '0'
 	option 'dns_nameserver_policy' '1'
 	option 'sniffer' '0'
 	option 'sniff_dns_mapping' '1'
@@ -66,45 +67,45 @@ config host
 	list 'ip' '127.0.0.1'
 	list 'ip' '::1'
 
-config nameserver
+config nameserver 'default-nameserver'
 	option 'enabled' '1'
-	option 'type' 'default'
+	option 'type' 'nameserver_nameserver'
 	list 'nameserver' '223.5.5.5'
 	list 'nameserver' '119.29.29.29'
 
-config nameserver
+config nameserver 'proxy-server-nameserver'
 	option 'enabled' '1'
-	option 'type' 'proxy-server'
+	option 'type' 'proxy_server_nameserver'
 	list 'nameserver' 'https://dns.alidns.com/dns-query'
 	list 'nameserver' 'https://doh.pub/dns-query'
 
-config nameserver
+config nameserver 'nameserver'
 	option 'enabled' '1'
 	option 'type' 'nameserver'
 	list 'nameserver' 'https://dns.alidns.com/dns-query'
 	list 'nameserver' 'https://doh.pub/dns-query'
 
-config nameserver
+config nameserver 'fallback'
 	option 'enabled' '1'
-	option 'type' 'fallback'
+	option 'type' 'fallback_nameserver'
 	list 'nameserver' 'https://dns.cloudflare.com/dns-query'
 	list 'nameserver' 'https://dns.google/dns-query'
 
-config fallback_filter
+config fallback_filter 'geoip-code'
 	option 'enabled' '1'
 	option 'type' 'geoip'
 	list 'value' 'CN'
 
-config fallback_filter
+config fallback_filter 'geosite'
 	option 'enabled' '1'
 	option 'type' 'geosite'
 	list 'value' 'GFW'
 
-config fallback_filter
+config fallback_filter 'ipcidr'
 	option 'enabled' '0'
 	option 'type' 'ipcidr'
 
-config fallback_filter
+config fallback_filter 'domain'
 	option 'enabled' '0'
 	option 'type' 'domain_name'
 
