section id doesn't support hyphen

--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -67,15 +67,15 @@ config host
 	list 'ip' '127.0.0.1'
 	list 'ip' '::1'
 
-config nameserver 'default-nameserver'
+config nameserver
 	option 'enabled' '1'
-	option 'type' 'nameserver_nameserver'
+	option 'type' 'default-nameserver'
 	list 'nameserver' '223.5.5.5'
 	list 'nameserver' '119.29.29.29'
 
-config nameserver 'proxy-server-nameserver'
+config nameserver
 	option 'enabled' '1'
-	option 'type' 'proxy_server_nameserver'
+	option 'type' 'proxy-server-nameserver'
 	list 'nameserver' 'https://dns.alidns.com/dns-query'
 	list 'nameserver' 'https://doh.pub/dns-query'
 
@@ -87,25 +87,25 @@ config nameserver 'nameserver'
 
 config nameserver 'fallback'
 	option 'enabled' '1'
-	option 'type' 'fallback_nameserver'
+	option 'type' 'fallback'
 	list 'nameserver' 'https://dns.cloudflare.com/dns-query'
 	list 'nameserver' 'https://dns.google/dns-query'
 
-config fallback_filter 'geoip-code'
+config fallback_filter
 	option 'enabled' '1'
-	option 'type' 'geoip'
+	option 'type' 'geoip-code'
 	list 'value' 'CN'
 
-config fallback_filter 'geosite'
+config fallback_filter
 	option 'enabled' '1'
 	option 'type' 'geosite'
 	list 'value' 'GFW'
 
-config fallback_filter 'ipcidr'
+config fallback_filter
 	option 'enabled' '0'
 	option 'type' 'ipcidr'
 
-config fallback_filter 'domain'
+config fallback_filter
 	option 'enabled' '0'
 	option 'type' 'domain_name'
 
