--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -51,8 +51,7 @@ config mixin 'mixin'
 	option 'sniff_dns_mapping' '1'
 	option 'sniff_pure_ip' '1'
 	option 'sniffer_overwrite_dest' '1'
-	list 'sniffer_force_domain_name' 'example.com'
-	list 'sniffer_ignore_domain_name' 'example.com'
+	list 'sniffer_ignore_domain_name' 'Mijia Cloud'
 	option 'geoip_format' 'dat'
 	option 'geodata_loader' 'memconservative'
 	option 'geoip_mmdb_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country-lite.mmdb'
