update luci default config

--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -51,7 +51,6 @@ config mixin 'mixin'
 	option 'sniff_dns_mapping' '1'
 	option 'sniff_pure_ip' '1'
 	option 'sniffer_overwrite_dest' '1'
-	list 'sniffer_ignore_domain_name' 'Mijia Cloud'
 	option 'geoip_format' 'dat'
 	option 'geodata_loader' 'memconservative'
 	option 'geoip_mmdb_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country-lite.mmdb'
@@ -78,13 +77,13 @@ config nameserver
 	list 'nameserver' 'https://dns.alidns.com/dns-query'
 	list 'nameserver' 'https://doh.pub/dns-query'
 
-config nameserver 'nameserver'
+config nameserver
 	option 'enabled' '1'
 	option 'type' 'nameserver'
 	list 'nameserver' 'https://dns.alidns.com/dns-query'
 	list 'nameserver' 'https://doh.pub/dns-query'
 
-config nameserver 'fallback'
+config nameserver
 	option 'enabled' '1'
 	option 'type' 'fallback'
 	list 'nameserver' 'https://dns.cloudflare.com/dns-query'
@@ -121,21 +120,21 @@ config nameserver_policy
 	list 'nameserver' 'https://dns.google/dns-query'
 
 config sniff
-	option 'enabled' '0'
+	option 'enabled' '1'
 	option 'protocol' 'HTTP'
 	list 'port' '80'
 	list 'port' '8080-8880'
 	option 'overwrite_dest' '1'
 
 config sniff
-	option 'enabled' '0'
+	option 'enabled' '1'
 	option 'protocol' 'TLS'
 	list 'port' '443'
 	list 'port' '8443'
 	option 'overwrite_dest' '1'
 
 config sniff
-	option 'enabled' '0'
+	option 'enabled' '1'
 	option 'protocol' 'QUIC'
 	list 'port' '443'
 	list 'port' '8443'
