fix makefile install script

--- a/mihomo/Makefile
+++ b/mihomo/Makefile
@@ -42,8 +42,9 @@ define Package/mihomo/install
 	$(INSTALL_DIR) $(1)/etc/mihomo/run
 	$(INSTALL_DIR) $(1)/etc/mihomo/run/ui
 
+	$(INSTALL_BIN) $(CURDIR)/files/reload_file_trigger.sh $(1)/etc/mihomo/reload_file_trigger.sh
 	$(INSTALL_BIN) $(CURDIR)/files/hijack.nft $(1)/etc/mihomo/hijack.nft
-	$(INSTALL_BIN) $(CURDIR)/files/mixin.yaml $(1)/etc/mihomo/mixin.yaml
+	$(INSTALL_DATA) $(CURDIR)/files/mixin.yaml $(1)/etc/mihomo/mixin.yaml
 
 	$(INSTALL_DIR) $(1)/etc/config
 	$(INSTALL_CONF) $(CURDIR)/files/mihomo.conf $(1)/etc/config/mihomo
