1. add missing ubus permission 2. show status as a option instead of section 3. add default upnp lease file path as same as miniupnpd

--- a/luci-app-mihomo/root/usr/share/rpcd/acl.d/luci-app-mihomo.json
+++ b/luci-app-mihomo/root/usr/share/rpcd/acl.d/luci-app-mihomo.json
@@ -3,6 +3,9 @@
 		"description": "Grant access to mihomo procedures",
 		"read": {
 			"uci": [ "mihomo" ],
+			"ubus": {
+				"service": [ "list" ]
+			},
 			"file": {
 				"/etc/mihomo/mixin.yaml": ["read"],
 				"/etc/mihomo/profiles/*.yaml": ["read"],
