build with_gvisor

--- a/mihomo/Makefile
+++ b/mihomo/Makefile
@@ -14,6 +14,7 @@ PKG_BUILD_FLAGS:=no-mips16
 
 GO_PKG:=github.com/metacubex/mihomo
 GO_PKG_LDFLAGS_X:=$(GO_PKG)/cmd.Version=$(PKG_VERSION)
+GO_PKG_TAGS:=with_gvisor
 
 include $(INCLUDE_DIR)/package.mk
 include $(TOPDIR)/feeds/packages/lang/golang/golang-package.mk
