--- a/mihomo/Makefile
+++ b/mihomo/Makefile
@@ -53,6 +53,9 @@ define Package/mihomo/install
 
 	$(INSTALL_DIR) $(1)/etc/init.d
 	$(INSTALL_BIN) $(CURDIR)/files/mihomo.init $(1)/etc/init.d/mihomo
+
+	$(INSTALL_DIR) $(1)/etc/uci-defaults
+	$(INSTALL_BIN) $(CURDIR)/files/migrate.sh $(1)/etc/uci-defaults/99_migrate-mihomo.sh
 endef
 
 define Build/Prepare
