--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,16 +2,16 @@ name: Build Packages
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
-    paths-ignore:
-      - '**.md'
-      - '.**'
 
 jobs:
   build:
-    name: Build ${{ matrix.arch }}
+    name: ${{ matrix.arch }} build
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -27,20 +27,16 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Get commit hash
-        run: |
-          COMMIT_HASH=$(git log -1 --pretty=format:%s)
-
-      - name: Building packages
-        uses: sbwml/openwrt-gh-action-sdk@go1.22
+      - name: Build
+        uses: openwrt/gh-action-sdk@main
         env:
           ARCH: ${{ matrix.arch }}-${{ matrix.tag }}
-          FEEDNAME: packages_ci
+          FEEDNAME: mihomo
           PACKAGES: luci-app-mihomo
           NO_REFRESH_CHECK: true
 
-      - name: Upload artifacts
+      - name: Upload
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.arch }}
-          path: bin/packages/${{ matrix.arch }}/packages_ci/*.ipk
+          path: bin/packages/${{ matrix.arch }}/mihomo/*.ipk
