sometimes no network at first start
1. don't download geox file in script, let the core handle this
2. start core procd instance with specified user
3. skip core's network traffic by skuid instead of mark, because some network traffic by core doesn't be marked, this will cause startup failure

--- a/mihomo/Makefile
+++ b/mihomo/Makefile
@@ -26,6 +26,7 @@ define Package/mihomo
   TITLE:=A rule based proxy in Go.
   URL:=https://wiki.metacubex.one
   DEPENDS:=+curl +inotifywait +yq firewall4 +kmod-nft-tproxy
+  USERID:=mihomo=7890:mihomo=7890
 endef
 
 define Package/mihomo/description
