sometimes no network at first start
1. add capabilities for core procd instance
2. fix metacubexd open button's url

--- a/mihomo/Makefile
+++ b/mihomo/Makefile
@@ -57,6 +57,9 @@ define Package/mihomo/install
 
 	$(INSTALL_DIR) $(1)/etc/uci-defaults
 	$(INSTALL_BIN) $(CURDIR)/files/migrate.sh $(1)/etc/uci-defaults/99_migrate-mihomo
+
+	$(INSTALL_DIR) $(1)/etc/capabilities
+	$(INSTALL_BIN) $(CURDIR)/files/capabilities.json $(1)/etc/capabilities/mihomo.json
 endef
 
 define Build/Prepare
