--- a/luci-app-mihomo/root/usr/share/rpcd/acl.d/luci-app-mihomo.json
+++ b/luci-app-mihomo/root/usr/share/rpcd/acl.d/luci-app-mihomo.json
@@ -10,6 +10,7 @@
 				"/etc/mihomo/mixin.yaml": ["read"],
 				"/etc/mihomo/profiles/*.yaml": ["read"],
 				"/etc/mihomo/profiles/*.yml": ["read"],
+				"/etc/mihomo/run/core.log": ["read"],
 				"/usr/bin/yq": ["exec"]
 			}
 		},
