--- a/mihomo/Makefile
+++ b/mihomo/Makefile
@@ -25,7 +25,7 @@ define Package/mihomo
   CATEGORY:=Network
   TITLE:=A rule based proxy in Go.
   URL:=https://wiki.metacubex.one
-  DEPENDS:=+curl +inotifywait +yq firewall4 +kmod-nft-tproxy
+  DEPENDS:=$(GO_ARCH_DEPENDS) +ca-bundle +curl +inotifywait +yq firewall4 +kmod-nft-tproxy
   USERID:=mihomo=7890:mihomo=7890
 endef
 
