--- a/luci-app-mihomo/root/usr/share/luci/menu.d/luci-app-mihomo.json
+++ b/luci-app-mihomo/root/usr/share/luci/menu.d/luci-app-mihomo.json
@@ -17,6 +17,13 @@
             "path": "mihomo/config"
         }
     },
+    "admin/services/mihomo/profileseditor": {
+        "title": "ProfilesEditor",
+        "action": {
+            "type": "view",
+            "path": "mihomo/profileseditor"
+        }
+    },
     "admin/services/mihomo/log": {
         "title": "Log",
         "action": {
