--- a/luci-app-mihomo/root/usr/share/luci/menu.d/luci-app-mihomo.json
+++ b/luci-app-mihomo/root/usr/share/luci/menu.d/luci-app-mihomo.json
@@ -12,20 +12,23 @@
     },
     "admin/services/mihomo/config": {
         "title": "Config",
+        "order": 10,
         "action": {
             "type": "view",
             "path": "mihomo/config"
         }
     },
-    "admin/services/mihomo/profileseditor": {
-        "title": "ProfilesEditor",
+    "admin/services/mihomo/editor": {
+        "title": "Editor",
+        "order": 20,
         "action": {
             "type": "view",
-            "path": "mihomo/profileseditor"
+            "path": "mihomo/editor"
         }
     },
     "admin/services/mihomo/log": {
         "title": "Log",
+        "order": 30,
         "action": {
             "type": "view",
             "path": "mihomo/log"
