--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           - aarch64_generic
           - x86_64
         release:
-          - 23.05
+          - openwrt-23.05
 
     steps:
       - uses: actions/checkout@v4
