--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -1,3 +1,5 @@
+config status 'status'
+
 config config 'config'
 	option 'init' '1'
 	option 'enabled' '0'
@@ -148,3 +150,7 @@ config sniff
 	list 'port' '443'
 	list 'port' '8443'
 	option 'overwrite_dest' '1'
+
+config editor 'editor'
+
+config log 'log'
