--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -13,6 +13,7 @@ config proxy 'proxy'
 	option 'router_proxy' '1'
 	option 'access_control_mode' ''
 	option 'dns_hijack' '1'
+	option 'bypass_china_mainland_ip' '0'
 
 config subscription
 	option 'name' 'default'
