--- a/mihomo/Makefile
+++ b/mihomo/Makefile
@@ -2,7 +2,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=mihomo
 PKG_VERSION:=1.18.7
-PKG_RELEASE:=141
+PKG_RELEASE:=142
 PKG_BUILD_TIME=$(shell date -u -Iseconds)
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
@@ -25,7 +25,7 @@ define Package/mihomo
   CATEGORY:=Network
   TITLE:=A rule based proxy in Go.
   URL:=https://wiki.metacubex.one
-  DEPENDS:=$(GO_ARCH_DEPENDS) +ca-bundle +curl +inotifywait +yq firewall4 +kmod-nft-tproxy
+  DEPENDS:=$(GO_ARCH_DEPENDS) +ca-bundle +curl +inotifywait +yq firewall4 +kmod-nft-tproxy +kmod-tun
   USERID:=mihomo=7890:mihomo=7890
 endef
 
@@ -46,12 +46,16 @@ define Package/mihomo/install
 	$(INSTALL_DIR) $(1)/etc/mihomo/run/rules
 	$(INSTALL_DIR) $(1)/etc/mihomo/run/ui
 
+	$(INSTALL_BIN) $(CURDIR)/files/constants.sh $(1)/etc/mihomo/constants.sh
 	$(INSTALL_BIN) $(CURDIR)/files/profile_watcher.sh $(1)/etc/mihomo/profile_watcher.sh
 	$(INSTALL_BIN) $(CURDIR)/files/upnp_lease_watcher.sh $(1)/etc/mihomo/upnp_lease_watcher.sh
+	$(INSTALL_BIN) $(CURDIR)/files/tun.sh $(1)/etc/mihomo/tun.sh
 	$(INSTALL_BIN) $(CURDIR)/files/hijack.nft $(1)/etc/mihomo/hijack.nft
 	$(INSTALL_BIN) $(CURDIR)/files/hijack6.nft $(1)/etc/mihomo/hijack6.nft
-	$(INSTALL_BIN) $(CURDIR)/files/geoip-cn.nft $(1)/etc/mihomo/geoip-cn.nft
-	$(INSTALL_BIN) $(CURDIR)/files/geoip6-cn.nft $(1)/etc/mihomo/geoip6-cn.nft
+	$(INSTALL_BIN) $(CURDIR)/files/hijack_tun.nft $(1)/etc/mihomo/hijack_tun.nft
+	$(INSTALL_BIN) $(CURDIR)/files/hijack6_tun.nft $(1)/etc/mihomo/hijack6_tun.nft
+	$(INSTALL_BIN) $(CURDIR)/files/geoip_cn.nft $(1)/etc/mihomo/geoip_cn.nft
+	$(INSTALL_BIN) $(CURDIR)/files/geoip6_cn.nft $(1)/etc/mihomo/geoip6_cn.nft
 	$(INSTALL_DATA) $(CURDIR)/files/mixin.yaml $(1)/etc/mihomo/mixin.yaml
 
 	$(INSTALL_DIR) $(1)/etc/config
@@ -61,8 +65,8 @@ define Package/mihomo/install
 	$(INSTALL_BIN) $(CURDIR)/files/mihomo.init $(1)/etc/init.d/mihomo
 
 	$(INSTALL_DIR) $(1)/etc/uci-defaults
-	$(INSTALL_BIN) $(CURDIR)/files/init.sh $(1)/etc/uci-defaults/99_init-mihomo
-	$(INSTALL_BIN) $(CURDIR)/files/migrate.sh $(1)/etc/uci-defaults/99_migrate-mihomo
+	$(INSTALL_BIN) $(CURDIR)/files/init.sh $(1)/etc/uci-defaults/99_init_mihomo
+	$(INSTALL_BIN) $(CURDIR)/files/migrate.sh $(1)/etc/uci-defaults/99_migrate_mihomo
 
 	$(INSTALL_DIR) $(1)/etc/capabilities
 	$(INSTALL_DATA) $(CURDIR)/files/capabilities.json $(1)/etc/capabilities/mihomo.json
