--- a/mihomo/Makefile
+++ b/mihomo/Makefile
@@ -41,22 +41,26 @@ define Package/mihomo/install
 	$(call GoPackage/Package/Install/Bin,$(1))
 
 	$(INSTALL_DIR) $(1)/etc/mihomo
+	$(INSTALL_DIR) $(1)/etc/mihomo/scripts
+	$(INSTALL_DIR) $(1)/etc/mihomo/nftables
 	$(INSTALL_DIR) $(1)/etc/mihomo/profiles
 	$(INSTALL_DIR) $(1)/etc/mihomo/run
 	$(INSTALL_DIR) $(1)/etc/mihomo/run/rules
 	$(INSTALL_DIR) $(1)/etc/mihomo/run/ui
 
-	$(INSTALL_BIN) $(CURDIR)/files/constants.sh $(1)/etc/mihomo/constants.sh
-	$(INSTALL_BIN) $(CURDIR)/files/profile_watcher.sh $(1)/etc/mihomo/profile_watcher.sh
-	$(INSTALL_BIN) $(CURDIR)/files/upnp_lease_watcher.sh $(1)/etc/mihomo/upnp_lease_watcher.sh
-	$(INSTALL_BIN) $(CURDIR)/files/tun.sh $(1)/etc/mihomo/tun.sh
-	$(INSTALL_BIN) $(CURDIR)/files/hijack.nft $(1)/etc/mihomo/hijack.nft
-	$(INSTALL_BIN) $(CURDIR)/files/hijack6.nft $(1)/etc/mihomo/hijack6.nft
-	$(INSTALL_BIN) $(CURDIR)/files/hijack_tun.nft $(1)/etc/mihomo/hijack_tun.nft
-	$(INSTALL_BIN) $(CURDIR)/files/hijack6_tun.nft $(1)/etc/mihomo/hijack6_tun.nft
-	$(INSTALL_BIN) $(CURDIR)/files/geoip_cn.nft $(1)/etc/mihomo/geoip_cn.nft
-	$(INSTALL_BIN) $(CURDIR)/files/geoip6_cn.nft $(1)/etc/mihomo/geoip6_cn.nft
 	$(INSTALL_DATA) $(CURDIR)/files/mixin.yaml $(1)/etc/mihomo/mixin.yaml
+
+	$(INSTALL_BIN) $(CURDIR)/files/scripts/constants.sh $(1)/etc/mihomo/scripts/constants.sh
+	$(INSTALL_BIN) $(CURDIR)/files/scripts/profile_watcher.sh $(1)/etc/mihomo/scripts/profile_watcher.sh
+	$(INSTALL_BIN) $(CURDIR)/files/scripts/upnp_watcher.sh $(1)/etc/mihomo/scripts/upnp_watcher.sh
+	$(INSTALL_BIN) $(CURDIR)/files/scripts/tun.sh $(1)/etc/mihomo/scripts/tun.sh
+
+	$(INSTALL_BIN) $(CURDIR)/files/nftables/hijack.nft $(1)/etc/mihomo/nftables/hijack.nft
+	$(INSTALL_BIN) $(CURDIR)/files/nftables/hijack6.nft $(1)/etc/mihomo/nftables/hijack6.nft
+	$(INSTALL_BIN) $(CURDIR)/files/nftables/hijack_tun.nft $(1)/etc/mihomo/nftables/hijack_tun.nft
+	$(INSTALL_BIN) $(CURDIR)/files/nftables/hijack6_tun.nft $(1)/etc/mihomo/nftables/hijack6_tun.nft
+	$(INSTALL_BIN) $(CURDIR)/files/nftables/geoip_cn.nft $(1)/etc/mihomo/nftables/geoip_cn.nft
+	$(INSTALL_BIN) $(CURDIR)/files/nftables/geoip6_cn.nft $(1)/etc/mihomo/nftables/geoip6_cn.nft
 
 	$(INSTALL_DIR) $(1)/etc/config
 	$(INSTALL_CONF) $(CURDIR)/files/mihomo.conf $(1)/etc/config/mihomo
@@ -65,8 +69,8 @@ define Package/mihomo/install
 	$(INSTALL_BIN) $(CURDIR)/files/mihomo.init $(1)/etc/init.d/mihomo
 
 	$(INSTALL_DIR) $(1)/etc/uci-defaults
-	$(INSTALL_BIN) $(CURDIR)/files/init.sh $(1)/etc/uci-defaults/99_init_mihomo
-	$(INSTALL_BIN) $(CURDIR)/files/migrate.sh $(1)/etc/uci-defaults/99_migrate_mihomo
+	$(INSTALL_BIN) $(CURDIR)/files/uci-defaults/init.sh $(1)/etc/uci-defaults/99_init_mihomo
+	$(INSTALL_BIN) $(CURDIR)/files/uci-defaults/migrate.sh $(1)/etc/uci-defaults/99_migrate_mihomo
 
 	$(INSTALL_DIR) $(1)/etc/capabilities
 	$(INSTALL_DATA) $(CURDIR)/files/capabilities.json $(1)/etc/capabilities/mihomo.json
