add mihomo.config.test_profile option

--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -7,6 +7,7 @@ config config 'config'
 	option 'cron_expression' '0 3 * * *'
 	option 'profile' 'http://example.com/default.yaml'
 	option 'mixin' '1'
+	option 'test_profile' '1'
 
 config proxy 'proxy'
 	option 'transparent_proxy' '1'
