--- a/mihomo/Makefile
+++ b/mihomo/Makefile
@@ -2,7 +2,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=mihomo
 PKG_VERSION:=1.18.7
-PKG_RELEASE:=148
+PKG_RELEASE:=149
 PKG_BUILD_TIME=$(shell date -u -Iseconds)
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
@@ -59,6 +59,7 @@ define Package/mihomo/install
 	$(INSTALL_BIN) $(CURDIR)/files/nftables/hijack6.nft $(1)/etc/mihomo/nftables/hijack6.nft
 	$(INSTALL_BIN) $(CURDIR)/files/nftables/hijack_tun.nft $(1)/etc/mihomo/nftables/hijack_tun.nft
 	$(INSTALL_BIN) $(CURDIR)/files/nftables/hijack6_tun.nft $(1)/etc/mihomo/nftables/hijack6_tun.nft
+	$(INSTALL_BIN) $(CURDIR)/files/nftables/hijack_dns.nft $(1)/etc/mihomo/nftables/hijack_dns.nft
 	$(INSTALL_BIN) $(CURDIR)/files/nftables/geoip_cn.nft $(1)/etc/mihomo/nftables/geoip_cn.nft
 	$(INSTALL_BIN) $(CURDIR)/files/nftables/geoip6_cn.nft $(1)/etc/mihomo/nftables/geoip6_cn.nft
 
