--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -5,7 +5,7 @@ config config 'config'
 	option 'enabled' '0'
 	option 'scheduled_restart' '0'
 	option 'cron_expression' '0 3 * * *'
-	option 'profile' 'http://example.com/default.yaml'
+	option 'profile' 'subscription:subscription'
 	option 'mixin' '1'
 	option 'test_profile' '1'
 
@@ -28,9 +28,18 @@ config proxy 'proxy'
 	option 'wan_interfaces' ''
 	option 'wan6_interfaces' ''
 
-config subscription
+config subscription 'subscription'
 	option 'name' 'default'
 	option 'url' 'http://example.com/default.yaml'
+	option 'user_agent' 'mihomo'
+	option 'convert' '0'
+	option 'convert_backend' ''
+	option 'convert_template' ''
+	option 'convert_advanced' '0'
+	option 'convert_include' ''
+	option 'convert_exclude' ''
+	option 'convert_emoji' '0'
+	option 'convert_insert_node_type' '0'
 
 config mixin 'mixin'
 	option 'mode' 'rule'
