--- a/mihomo/files/mihomo.conf
+++ b/mihomo/files/mihomo.conf
@@ -49,12 +49,8 @@ config mixin 'mixin'
 	option 'tcp_concurrent' '1'
 	option 'tcp_keep_alive_interval' '600'
 	option 'log_level' 'info'
-	option 'ui_razord' '0'
-	option 'ui_razord_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/Razord-meta/archive/refs/heads/gh-pages.tar.gz'
-	option 'ui_yacd' '0'
-	option 'ui_yacd_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/Yacd-meta/archive/refs/heads/gh-pages.tar.gz'
-	option 'ui_metacubexd' '1'
-	option 'ui_metacubexd_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.tar.gz'
+	option 'ui_name' 'metacubexd'
+	option 'ui_url' 'https://mirror.ghproxy.com/https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip'
 	option 'api_port' '9090'
 	option 'api_secret' ''
 	option 'selection_cache' '1'
