--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -53,7 +53,7 @@ body:
     validations:
       required: true
   - type: dropdown
-    id: bug_platform
+    id: architecture
     attributes:
       label: 硬件架构
       multiple: true
@@ -111,7 +111,7 @@ body:
     validations:
       required: false
   - type: textarea
-    id: core_log
+    id: profile
     attributes:
       label: 配置文件
     validations:
