--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -27,6 +27,8 @@ body:
       options:
         - label: 我已经搜索过Issue，没有找到我的问题
           required: true
+        - label: 我已经查看过Wiki，没有找到解决办法
+          required: true
         - label: 我使用的是由本仓库代码构建插件，而不是其他Fork
           required: true
         - label: 这确实是插件的问题，而不是核心/面板/订阅转换服务的问题
